samples/_failures_safe/1761408799_58091b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dea892c3.c: In function ‘main’:
./samples/SAFE/__tmp_dea892c3.c:133:12: error: missing terminating " character
  133 |     printf("Matrix Operations Program
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dea892c3.c:133:5: error: expected expression at end of input
  133 |     printf("Matrix Operations Program
      |     ^~~~~~
./samples/SAFE/__tmp_dea892c3.c:133:5: error: expected declaration or statement at end of input
